# app/Http/Controllers/Auth/AuthController.php
@@ -3,15 +3,13 @@
 namespace App\Http\Controllers\Auth;
 
 use App\Actions\LoginAction;
-use App\Config\JwtIssuer;
 use App\Data\Responses\Auth\UserResponse;
 use App\Http\Controllers\Controller;
+use App\Mails\ResetPasswordEmail;
 use App\Models\User;
-use http\Env\Response;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
-use Lcobucci\JWT\Signer\Hmac\Sha256;
-use Lcobucci\JWT\Signer\Key\InMemory;
+use Illuminate\Support\Facades\Mail;
 
 class AuthController extends Controller
 {
@@ -25,8 +23,9 @@ class AuthController extends Controller
 
     /**
      * @param Request $request
+     * @return JsonResponse
      * @OA\Post(
-     *     path="/api/login",
+     *     path="/api/v1/login",
      *     tags={"login"},
      *     operationId="loginUser",
      *     @OA\Responses(
@@ -53,7 +52,6 @@ class AuthController extends Controller
      *         )
      *     )
      * )
-     * @throws \Exception
      */
     public function loginAsUser(Request $request): JsonResponse
     {
@@ -62,6 +60,7 @@ class AuthController extends Controller
 
     /**
      * @param Request $request
+     * @return JsonResponse
      * @OA\Post(
      *     path="/api/v1/admin/login",
      *     tags={"login"},
@@ -87,10 +86,9 @@ class AuthController extends Controller
      *                     type="string"
      *                 )
      *             )
-     *         )
-     *     )
+     *          )
+     *      )
      * )
-     * @throws \Exception
      */
     public function loginAsAdmin(Request $request): JsonResponse
     {
@@ -101,7 +99,7 @@ class AuthController extends Controller
      * @param Request $request
      * @return JsonResponse
      * @OA\Get(
-     *     path="/api/me",
+     *     path="/api/v1/me",
      *     tags={"me"},
      *     operationId="getMe",
      *     @OA\Responses(
@@ -120,14 +118,14 @@ class AuthController extends Controller
     public function getUser(Request $request): JsonResponse
     {
         $user = User::getUserByToken($request->bearerToken());
-        if(!$user) {
+        if ( ! $user) {
             return response()->json(['message' => 'User not found'], 404);
         }
         return response()->json(new UserResponse($user));
     }
 
     /**
-     * @OA\Get(
+     * @OA\Post(
      *     path="/api/v1/logout",
      *     tags={"logout"},
      *     operationId="logout",
@@ -146,7 +144,7 @@ class AuthController extends Controller
     }
 
     /**
-     * @OA\Get(
+     * @OA\Post(
      *     path="/api/v1/admin/logout",
      *     tags={"logout"},
      *     operationId="logout",
@@ -156,11 +154,100 @@ class AuthController extends Controller
      *     ),
      *     security={
      *          {"bearer": {}}
-     *     }
+     *     },
      * )
      */
     public function logoutAsAdmin(Request $request): JsonResponse
     {
         return $this->loginAction->logout($request->bearerToken());
+    }
+
+    /**
+     * @param Request $request
+     * @return JsonResponse
+     * @OA\Post(
+     *     path="/api/v1/forgot-password",
+     *     tags={"forgot-password"},
+     *     operationId="forgotPassword",
+     *     @OA\RequestBody(
+     *         description="Input data format",
+     *         @OA\MediaType(
+     *              mediaType="application/json",
+     *               @OA\Schema(
+     *                  type="object",
+     *                  @OA\Property(
+     *                      property="email"
+     *                      description="Users email",
+     *                      type="string",
+     *                  ),
+     *                )
+     *          )
+     *      )
+     *       @OA\Response(
+     *            response=200,
+     *            description="Successfuly sent email",
+     *        ),
+     *  )
+     */
+
+    public function sendResetPasswordEmail(Request $request): JsonResponse
+    {
+        $user = User::where('email', $request->email)->firstOrFail();
+        Mail::send(new ResetPasswordEmail($user));
+        return response()->json(['message' => 'Reset password email sent']);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/v1/admin/reset-password",
+     *     tags={"reset-password"},
+     *     operationId="resetPassword",
+     *     @OA\RequestBody(
+     *         description="Input data format",
+     *         @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\Schema(
+     *                  type="object",
+     *
+     *                  @OA\Property(
+     *                      property="email",
+     *                      description="Users email",
+     *                      type="string",
+     *                  ),
+     *                   @OA\Property(
+     *                      property="password",
+     *                      description="Users password",
+     *                      type="string",
+     *                  ),
+     *                   @OA\Property(
+     *                      property="password_confirmation",
+     *                      description="Users password confirmation",
+     *                      type="string",
+     *                  ),
+     *              ),
+     *         ),
+     *      ),
+     *      @OA\Responses(
+     *         response=200,
+     *         description="Successfully reset password",
+     *      ),
+     *    )
+     *
+     *
+     * @throws \Illuminate\Validation\ValidationException
+     */
+    public function resetPassword(Request $request): JsonResponse
+    {
+        $this->validate($request, [
+            'email' => 'required|min:3|max:50',
+            'password' => 'required|confirmed|min:8',
+        ]);
+        $user = User::where('email', $request->email)->firstOrFail();
+        if ($user->remember_token !== $request->token) {
+            return response()->json(['message' => 'Invalid token'], 400);
+        }
+        $user->password = bcrypt($request->password);
+        $user->save();
+        return response()->json(['message' => 'Password changed']);
     }
 }
