# storage/api-docs/api-docs.json
@@ -1,11 +1,11 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Your super ApplicationAPI",
+        "title": "PetShop API",
         "version": "1.0.0"
     },
     "paths": {
-        "/api/login": {
+        "/api/v1/login": {
             "post": {
                 "tags": [
                     "login"
